Closed Bug 81486 Opened 25 years ago Closed 25 years ago

Mac Romanian and cns plan 7 unicode converters do not work

Categories

(Core :: Internationalization, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.2

People

(Reporter: tetsuroy, Assigned: tetsuroy)

References

()

Details

(Whiteboard: checked-in)

Attachments

(1 file)

Need to fix warnings: 1-2. intl/chardet/src/nsPSMDetectors.h:132 3-4. intl/uconv/ucvlatin/nsUCvLatinModule.cpp:256 5. intl/uconv/ucvlatin/nsUCvLatinModule.cpp:374 6. intl/uconv/ucvtw2/nsUCvTw2Module.cpp:131
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla0.9.2
ftang: please review.
r=ftang Please change the summary. The problem is not the warnning. The warning just tell you there are a problem. The real problem is you forget mac romanian converters and a cns plan 7
Changing the summary. I could have prevented this bug if the compiler generated warnings in Windows ( my primary coding environment ) We may want to increase the compiler warning level to -WX brendan: can you /sr=?
Summary: Fix build warnings → Mac Romanian and cns plan 7 unicode converters do not work
Whiteboard: waiting for /sr=
sr=blizzard
a=blizzard for the trunk on behalf of drivers
Whiteboard: waiting for /sr= → waiting for tree opening
Whiteboard: waiting for tree opening → r=ftang sr/a=blizzard waiting for tree opening
checked-in
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: r=ftang sr/a=blizzard waiting for tree opening → checked-in
Changing QA contact to ftang@netscape.com for now. Frank, can you verify this within development or provide a test case for IQA?
QA Contact: andreasb → ftang
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: