bug 81486: Mac Romanian  and cns plan 7 unicode converters do not work Correcting typo errors for class names r=ftang sr/a=blizzard